# Slitherai

./: .gitignore  Cargo.toml  HyperParamTuningResults.txt  LICENSE  pyproject.toml
Slitherai/: Client.py  Server.py
Slitherai/AI/: AIEnv.py  AiManager.py  Constants.py  TuneHyperParameters.py  check.py  train.py
Slitherai/Environment/: ButtonComponent.py  CameraComponent.py  Client.py  Constants.py  Food.py  Instructions.py  NetworkManagerComponent.py  Replication.cp311-win_amd64.pyd  Replication.pyi  Server.py  SnakeBodyComponent.py  TextField.py  __main__.py  replication.md
Slitherai/Environment/Core/: Application.py  CollisionComponent.py  Component.py  Entity.py  Event.py  GridWorld.py  World.py
src/: lib.rs  main.py
src/Environment/Core/: Component.py  Engine.py  Entity.py  Renderer.py  World.py
src/Environment/Core/Components/: SnakeBody.py  Transform.py
