[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Slitherai"
version = "0.0.1"
description = "Sliter.io AI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "YS-RAPTOR" }]
urls = { homepage = "https://github.com/YS-RAPTOR/slitherai" }
requires-python = ">=3.11"
dependencies = ["raylib>=4.5.0", "numpy>=1.24.0"]
